log
Thu 14 Sep 2023 01:18:05 AM UTC: 
 tests:  1|8
total_score: 0/70
859d461
Thu 14 Sep 2023 01:22:28 AM UTC: 
 treemap.c | 57 ++++++++++++++++++++-------------------------------------
 1 file changed, 20 insertions(+), 37 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:53: error: expected ‘)’ before ‘;’ token
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:45:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   45 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:40:13: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap * map = (TreeMap *) malloc(sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0b736ea
